# CPP-Junior-Homework-2

./: CMakeLists.txt  main.cpp
include/: factorial.h  is_prime.h  text_parser.h
src/: factorial.cpp  is_prime.cpp  text_parser.cpp
test/: CMakeLists.txt  factorial_test.cpp  prime_test.cpp  text_parser_test.cpp
